--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,8 @@
 [color]
 	ui = auto
 [alias]
-	chlog = log -n 5 --oneline
+	chl = log -n 5 --oneline
+	sb = checkout
 	nb = checkout -b
 	b = branch
 	s = status -s
